[project]
name = "instagram-web-scrapper"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "seujorgenochurras", email = "eusoulegaldemaiseverdadeeujuro@gmail.com"},
]
dependencies = ["playwright>=1.49.1", "requests>=2.32.3", "schedule>=1.2.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
scrapper = "python __init__.py"

[tool.pdm]
distribution = false
